--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "@metamask/snaps-types": "^2.0.0",
     "@metamask/snaps-ui": "^2.0.0",
-    "buffer": "^6.0.3"
+    "@metamask/utils": "^8.1.0",
+    "buffer": "^6.0.3",
+    "ethers": "^6.7.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
