--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "hHzramYGsYtkb+nhZ5PHNm2WX2pVbBWwsqOG30dfbMo=",
+    "shasum": "YVP9V6lLzlJRL3qFpmr945BbYfEF2yy+y/MHrnd0QRk=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -20,11 +20,13 @@
   "initialPermissions": {
     "snap_dialog": {},
     "snap_notify": {},
+    "snap_manageState": {},
     "endowment:rpc": {
       "dapps": true,
       "snaps": false
     },
     "endowment:network-access": {},
+    "endowment:ethereum-provider": {},
     "endowment:cronjob": {
       "jobs": [
         {
