--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dmoo-cron",
+  "name": "rss3-cron",
   "version": "0.1.0",
   "description": "RSS3 snap monitor your wallet address.",
   "repository": {
