--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -29,8 +29,10 @@
     "@metamask/snaps-types": "^2.0.0",
     "@metamask/snaps-ui": "^2.0.0",
     "@metamask/utils": "^8.1.0",
+    "@rss3/js-sdk": "^0.6.27",
     "buffer": "^6.0.3",
-    "ethers": "^6.7.1"
+    "ethers": "^6.7.1",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
