--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,17 +26,29 @@
   },
   "dependencies": {
     "@metamask/providers": "^9.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-postcss": "^6.12.0",
+    "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-transformer-sharp": "^5.12.3",
+    "lucide-react": "^0.290.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "styled-components": "5.3.3"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^10.0.0",
     "@metamask/eslint-config-jest": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
-    "@svgr/webpack": "^6.4.0",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -44,7 +56,6 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
@@ -54,10 +65,8 @@
     "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "gatsby": "^4.24.4",
+    "gatsby": "^5.12.9",
     "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-styled-components": "^5.24.0",
-    "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "prettier": "^2.2.1",
     "prettier-plugin-packagejson": "^2.2.18",
     "rimraf": "^3.0.2",
