--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -5,7 +5,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src", "src/types/*.d.ts"]
 }
