--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@metamask/providers": "^9.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
