--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -25,9 +25,14 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@metamask/providers": "^9.0.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "ahooks": "^3.7.8",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -40,10 +45,12 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-is": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^10.0.0",
@@ -67,7 +74,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gatsby": "^5.12.9",
-    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-manifest": "^5.12.3",
     "prettier": "^2.2.1",
     "prettier-plugin-packagejson": "^2.2.18",
     "rimraf": "^3.0.2",
