--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rss3-metamask-snap",
   "version": "0.1.0",
-  "description": "Get notifications when monitored addresses produce new activities.",
+  "description": "Get notifications when your Web3 frens produce new activities.",
   "repository": {
     "type": "git",
     "url": "https://github.com/NaturalSelectionLabs/RSS3-MetaMask-Snap.git"
