--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,13 +1,13 @@
 {
   "version": "0.1.0",
-  "description": "Get notifications when monitored addresses produce new activities.",
-  "proposedName": "Activity Monitor",
+  "description": "Get notifications when your Web3 frens produce new activities.",
+  "proposedName": "RSS3 Social Notifier",
   "repository": {
     "type": "git",
     "url": "https://github.com/NaturalSelectionLabs/RSS3-MetaMask-Snap.git"
   },
   "source": {
-    "shasum": "1lmnkid0IQzmmw0ZJyWTODIJu+Vzqeo1KG5TL2xmFeY=",
+    "shasum": "otV0CuKpgG18gqS4SPVejZdu0OtF7aN9RmFrx13s674=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
