--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.6]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -24,47 +24,8 @@ jobs:
       - run: yarn lint
       - run: yarn test
       - name: Cache snap build
-        if: ${{ matrix.node-version == '18.x' }}
+        if: ${{ matrix.node-version == '18.6' }}
         uses: actions/cache@v3
         with:
           path: ./packages/snap/dist
           key: snap-${{ runner.os }}-${{ github.sha }}
-      # - name: Require clean working directory
-      #   shell: bash
-      #   run: |
-      #     if ! git diff --exit-code; then
-      #       echo "Working tree dirty after building"
-      #       exit 1
-      #     fi
-
-  e2e:
-    name: End-to-end Tests
-    runs-on: ubuntu-latest
-    needs:
-      - build-lint-test
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
-      - name: Restore snap build cache
-        uses: actions/cache@v3
-        with:
-          path: ./packages/snap/dist
-          key: snap-${{ runner.os }}-${{ github.sha }}
-      - run: yarn install --immutable
-      - name: Install Google Chrome
-        run: yarn install-chrome
-      - name: Run e2e tests
-        run: yarn workspace rss3-metamask-snap run test
-
-  all-jobs-pass:
-    name: All jobs pass
-    runs-on: ubuntu-latest
-    needs:
-      - build-lint-test
-      - e2e
-    steps:
-      - run: echo "Great success!"
