--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "gatsby-plugin-env-variables": "^2.3.0",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-postcss": "^6.12.0",
