--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/NaturalSelectionLabs/RSS3-Social-Notifier-Snap.git"
   },
   "source": {
-    "shasum": "9tIWe21pvM/IfZGKdQfMYHExbqqaMy1iIqn/9OkYcf4=",
+    "shasum": "XSLaqKGvHHfPIM4AsFyw0bdaRRUNvWUj91OagQNfRwA=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -39,6 +39,12 @@
           "expression": "* * * * *",
           "request": {
             "method": "executeFollow"
+          }
+        },
+        {
+          "expression": "* * * * *",
+          "request": {
+            "method": "checkConnectedUserProfiles"
           }
         }
       ]
