fix(deploy): content-security-policy

--- a/packages/site/vercel.json
+++ b/packages/site/vercel.json
@@ -17,7 +17,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' *.rss3.io"
+          "value": "default-src https:"
         },
         {
           "key": " Access-Control-Allow-Origin",
