--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -48,12 +48,14 @@
     "gatsby-plugin-sri": "^1.1.0",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.12.3",
+    "glob": "^10.3.10",
     "lucide-react": "^0.290.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-is": "^18.2.0",
+    "replace-in-file": "^7.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
