--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ node_modules/
 # dotenv environment variables file
 .env
 .env.test
+.env*.local
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
@@ -75,3 +76,4 @@ node_modules/
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
