feat: filter out duplicate data in the following list, based on the address

--- a/packages/site/.env.development
+++ b/packages/site/.env.development
@@ -2,4 +2,4 @@
 * To use this, rename to $(.env.production) and set the production SNAP_ORIGIN here
 */
 SNAP_ORIGIN=local:http://localhost:8080
-ENVIRONMENT=production
+ENVIRONMENT=development
