--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "compare-versions": "^6.1.0",
     "dotenv": "^16.3.1",
     "gatsby-plugin-csp": "^1.1.4",
     "gatsby-plugin-env-variables": "^2.3.0",
