chore: migrate `@rss3/js-sdk` to `@rss3/api-core`

--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -29,7 +29,8 @@
     "@metamask/snaps-types": "^3.1.0",
     "@metamask/snaps-ui": "^3.1.0",
     "@metamask/utils": "^8.1.0",
-    "@rss3/js-sdk": "^0.6.53",
+    "@rss3/api-core": "^0.0.9",
+    "@rss3/api-utils": "^0.0.9",
     "@urql/core": "^4.1.4",
     "axios": "^1.6.1",
     "buffer": "^6.0.3",
