chore: migrate `@rss3/api-core` to `@rss3/sdk`

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -34,8 +34,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@rss3/api-core": "^0.0.9",
-    "@rss3/api-utils": "^0.0.9",
+    "@rss3/sdk": "^0.0.11",
     "ahooks": "^3.7.8",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
